--- a/frontend/src/app/tournament-list/tournament-list.component.html
+++ b/frontend/src/app/tournament-list/tournament-list.component.html
@@ -8,7 +8,8 @@
 <div class="container-fluid">
   <!-- @for (tournament of tournaments; track tournaments.id) { .. } -->
   <div class="row" *ngFor="let tournament of tournaments">
-    <A class="col-md-2" routerLink="/tournaments/{{tournament.id}}">Detail</A>
+    <a class="col-md-2" routerLink="/tournaments/{{tournament.id}}">Detail</a>
+    <a class="col-md-2" routerLink="/tournaments/{{tournament.id}}">Supprimer</a>
     <label class="col-md-5">{{tournament.name}}</label>
     <label class="col-md-2">{{tournament.state}}</label>
   </div>
